--- a/index.html
+++ b/index.html
@@ -2,34 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- displays site properly based on user's device -->
-
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
-    <title>Frontend Mentor | Social proof section</title>
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/all.min.css">
-    <link rel="stylesheet" href="./css/social_ proof.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>social-proof</title>
+    <link rel="stylesheet" href="css/normalize.csss">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/social_ proof.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;700&family=Spartan:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-        .attribution {
-            font-size: 11px;
-            text-align: center;
-        }
-        
-        .attribution a {
-            color: hsl(228, 45%, 44%);
-        }
-    </style>
 </head>
 
 <body>
-    <!-- start section -->
+    <!-- start-section -->
     <div class="section">
         <div class="container">
             <div class="text">
@@ -42,65 +29,59 @@
                     <i class="filled fas fa-star"></i>
                     <i class="filled fas fa-star"></i>
                     <i class="filled fas fa-star"></i>
-                    <i class="filled fas fa-star"></i> Rated 5 Stars in Reviews
+                    <i class="filled fas fa-star"></i> &ensp; Rated 5 Stars in Reviews
                 </div>
                 <div class="rate">
                     <i class="filled fas fa-star"></i>
                     <i class="filled fas fa-star"></i>
                     <i class="filled fas fa-star"></i>
                     <i class="filled fas fa-star"></i>
-                    <i class="filled fas fa-star"></i> Rated 5 Stars in Report Guru
+                    <i class="filled fas fa-star"></i>&ensp; Rated 5 Stars in Report Guru
                 </div>
                 <div class="rate">
                     <i class="filled fas fa-star"></i>
                     <i class="filled fas fa-star"></i>
                     <i class="filled fas fa-star"></i>
                     <i class="filled fas fa-star"></i>
-                    <i class="filled fas fa-star"></i> Rated 5 Stars in BestTech
+                    <i class="filled fas fa-star"></i>&ensp; Rated 5 Stars in BestTech
                 </div>
             </div>
         </div>
-        <div class="card">
-            <div class="images">
-                <img src="./images/image-colton.jpg" alt="">
-                <div class="info">
-                    <h3> Colton Smith</h3>
-                    <span class="title"> Verified Buyer</span>
+        <div class="container">
+
+            <div class="box1">
+                <div class="box">
+                    <div class="image">
+                        <img src="images/image-colton.jpg" alt="">
+                    </div>
+                    <h4>Colton Smith</h4>
+                    <span>Verified Buyer</span>
                     <p> "We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"</p>
                 </div>
-            </div>
-        </div>
-        <div class="card">
-            <div class="images">
-                <img src="./images/image-irene.jpg" alt="">
-                <div class="info">
-                    <h3> Irene Roberts</h3>
-                    <span class="title"> Verified Buyer</span>
+
+
+                <div class="box">
+                    <div class="image">
+                        <img src="images/image-irene.jpg" alt="">
+                    </div>
+                    <h4> Irene Roberts </h4>
+                    <span>Verified Buyer</span>
                     <p>"Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery." </p>
                 </div>
-            </div>
-        </div>
-        <div class="card">
-            <div class="images">
-                <img src="./images/image-anne.jpg" alt="">
-                <div class="info">
-                    <h3> Anne Wallace</h3>
-                    <span class="title"> Verified Buyer</span>
-                    <p>"Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!"</p>
+
+                <div class="box">
+                    <div class="image">
+                        <img src="images/image-anne.jpg" alt="">
+                    </div>
+                    <h4> Anne Wallace</h4>
+                    <span>Verified Buyer</span>
+                    <p> "Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!"</p>
                 </div>
             </div>
         </div>
 
     </div>
-    <!-- End section -->
-
-
-
-    <div class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a
-      >. Coded by <a href="#">Dalia ALkordi</a>.
-    </div>
+    <!-- End-section -->
 </body>
 
 </html>
